--- a/challenge/challenge_3_V.ipynb
+++ b/challenge/challenge_3_V.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Challenge: Program Pengecekan Eligible Voting dan Skor Waktu\n",
+    "# Challenge Kelas V: Program Pengecekan Eligible Voting dan Skor Waktu\n",
     "\n",
     "## 1. Deskripsi Tantangan\n",
     "\n",
