--- a/tips_and_tricks/learn_loop_func.ipynb
+++ b/tips_and_tricks/learn_loop_func.ipynb
@@ -34,6 +34,41 @@
     }
    },
    "source": [
+    "## Penyelesaian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_multiples(n):\n",
+    "    sum_value = 0\n",
+    "    for i in range(n):\n",
+    "        if i % 3 == 0 or i % 5 == 0:\n",
+    "            sum_value += i\n",
+    "    return sum_value\n",
+    "\n",
+    "print(sum_of_multiples(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
     "##  2. Hitung Huruf Vokal dalam String\n",
     "\n",
     "**Deskripsi**:  \n",
@@ -54,11 +89,56 @@
     "**Hasil yang diharapkan**:\n",
     "Untuk input \"Hello World\", fungsi ini akan mengembalikan 3 karena terdapat tiga huruf vokal dalam string tersebut: e, o, dan o."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Penyelesaian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_vowels(s):\n",
+    "    count = 0\n",
+    "    for char in s:\n",
+    "        if char in 'aeiouAEIOU':\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(count_vowels('Hello World'))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "soft-comp-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
